--- a/css/certificate.css
+++ b/css/certificate.css
@@ -287,7 +287,7 @@ body {
 .certificate-grid {
   perspective: 1200px;
   display: grid;
-  grid-template-columns: repeat(4, 220px); /* KUNCI 4 */
+  grid-template-columns: repeat(4, 220px); 
   gap: 40px;
 }
 
@@ -303,16 +303,25 @@ body {
   color: white;
 }
 
-.certificate-card img {
-  width: 100%;
-  height: 110px;
-  object-fit: contain;   /* 🔥 INI YANG KAMU BUTUH */
-  background: #000;      /* biar space kosong rapi */
-  border-radius: 10px;
-  transition: transform .35s ease;
+.certificate-card span {
+  font-size: 15px !important;
+  line-height: 1.3;
+  display: block;
+  margin-top: 6px;
+  text-align: center;
+  color: #fff;
 }
 
 
+
+.certificate-card img {
+  width: 100%;
+  height: 110px;
+  object-fit: contain;   
+  background: #000;      
+  border-radius: 10px;
+  transition: transform .35s ease;
+}
 
 
 .certificate-card span {
@@ -350,27 +359,28 @@ body {
 }
 
 /* hover card */
-
 .certificate-card:hover {
-  transform: translateY(-6px);
-  box-shadow: 0 10px 22px rgba(255, 255, 0, 0.4);
+  transform: translateY(-12px) scale(1.02);
+  box-shadow: 
+    0 9px 10px yellow,
+    inset 0 0 0 1px rgba(255, 255, 255, 0.25);
+
 }
 
-/* IMAGE NORMAL */
+
 .certificate-card img {
   width: 100%;
   height: 110px;
-  object-fit: contain;        /* 🔑 FULL GAMBAR */
+  object-fit: contain;        
   background: #000;
   border-radius: 10px;
   transition: transform .35s ease;
 }
 
-/* IMAGE HOVER (CUMA ZOOM TIPIS) */
-.certificate-card:hover img {
-  transform: scale(1.05);     /* dikit aja, sopan */
-}
 
+.certificate-card:hover img {
+  transform: scale(1.05);     
+}
 
 
 
@@ -410,7 +420,7 @@ body {
 
   .certificate-card {
     width: 100%;
-    max-width: 280px;
+    max-width: 2800px;
   }
 
   .certificate-card img {
