--- a/css/certificate.css
+++ b/css/certificate.css
@@ -302,14 +302,32 @@ body {
   color: white;
 }
 
+.certificate-card {
+  display: flex;
+  flex-direction: column;
+  height: 220px; /* sesuaikan tinggi card */
+}
+
+/* AREA GAMBAR */
+.certificate-card img {
+  height: 120px;
+  object-fit: contain;
+}
+
+/* AREA TEKS */
 .certificate-card span {
-  font-size: 15px !important;
-  line-height: 1.3;
-  display: block;
-  margin-top: 6px;
+  flex: 1;                     /* ambil sisa ruang */
+  display: flex;
+  align-items: center;         /* tengah atas-bawah */
+  justify-content: center;     /* tengah kiri-kanan */
   text-align: center;
+  font-size: 15px;
+  line-height: 1.3;
+  padding: 0 8px;
   color: #fff;
 }
+
+
 
 
 
@@ -323,13 +341,7 @@ body {
 }
 
 
-.certificate-card span {
-  display: block;
-  margin-top: 6px;
-  font-size: .8rem;
-  text-align: center;
-  opacity: .85;
-}
+
 
 .certificate-year {
   font-size: 2rem;
@@ -404,7 +416,7 @@ body {
   .certificate-grid {
     grid-template-columns: 1fr;
     justify-items: center;
-    gap: 24px;
+    gap: 40px;
   }
 
   .certificate-card {
@@ -417,7 +429,7 @@ body {
   }
 }
 
-/* === SCROLL ANIMATION === */
+
 
 
 
