try render mobile fill animation

--- a/css/styles.css
+++ b/css/styles.css
@@ -648,10 +648,13 @@ html {
 
 .fill {
   height: 100%;
+  width: 0;
   background: linear-gradient(90deg, #1e90ff, #00bfff);
   border-radius: 10px;
   transition: width 1s ease;
+  will-change: width;
 }
+
 
 .skill-info {
   display: flex;
