--- a/css/styles.css
+++ b/css/styles.css
@@ -648,11 +648,14 @@ html {
 
 .fill {
   will-change: width;
+  transform: translateZ(0);
   height: 100%;
   width: 0;
   background: linear-gradient(90deg, #1e90ff, #00bfff);
   border-radius: 10px;
   transition: width 1s ease;
+  transition: width 1s cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 
