--- a/css/styles.css
+++ b/css/styles.css
@@ -172,8 +172,8 @@ html {
   }
 
   .profile .right img {
-    width: 95px;
-    height: 95px;
+    width: 89px;
+    height: 89px;
     position: relative;
     left: -10px; 
   }
@@ -813,6 +813,7 @@ html {
     margin: 10px auto;     
     margin-top: 40px;
     margin-bottom: 0px;
+    margin-left: 10px;
   }
 
   .box.profile p {
@@ -836,6 +837,27 @@ html {
   .small-box {
     aspect-ratio: unset;   
     min-height: 120px;     
+  }
+
+  .section-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    margin-top: 40px;
+    margin-bottom: 25px;
+  }
+
+  .section-title {
+    color: white;
+    margin: 0;
+    font-size: 25px;
+  }
+
+  .section-divider {
+    width: 90%;
+    margin-top: 40px;
+    margin-bottom: -10px;
   }
 
 }
