add fungcion js certif

--- a/css/certificate.css
+++ b/css/certificate.css
@@ -463,3 +463,23 @@ body {
 
 
 
+/* animated */
+
+.certificate-card,
+.certificate-year {       /* header & card */
+  opacity: 0;
+  transform: translateY(40px);
+  transition: all 0.6s ease;
+}
+
+.certificate-card.active,
+.certificate-year.active {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
+
+
+
+
