--- a/css/certificate.css
+++ b/css/certificate.css
@@ -478,6 +478,11 @@ body {
   transform: translateY(0);
 }
 
+.certificate-card.active:hover {
+  transform: translateY(-10px) scale(1.02); /* hover masih jalan */
+  box-shadow: 0 9px 10px yellow, inset 0 0 0 1px rgba(255,255,255,0.25);
+}
+
 
 
 
