--- a/css/certificate.css
+++ b/css/certificate.css
@@ -224,8 +224,8 @@ body {
   position: absolute;
   left: 50%;
   bottom: 6px;
-  width: 0;
-  height: 2px;
+  width: 70%;
+  height: 3px;
   background: yellow;
   transition: width 0.3s ease;
   transform: translateX(-50%);
@@ -247,7 +247,7 @@ body {
     backdrop-filter: blur(14px);
     -webkit-backdrop-filter: blur(14px);
     border: 1px solid rgba(255, 255, 255, 0.18);
-    
+
   border-radius: 10px;
   box-shadow: 0 8px 20px rgba(0,0,0,.35);
   opacity: 0;
