--- a/css/styles.css
+++ b/css/styles.css
@@ -1582,9 +1582,7 @@ align-items: flex-start;
     --s: 1.04;
     box-shadow: 0 4px 8px rgba(77, 163, 255, 0.5);
   }
-
 }
-
 
 
 
@@ -1836,7 +1834,7 @@ align-items: flex-start;
 .contact-form,
 .contact-image {
   opacity: 0;
-  transform: translateY(50px); /* lebih besar supaya kelihatan di mobile */
+  transform: translateY(50px);
   transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
 
