--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,6 @@ html {
 }
 
 
-/*  */
 /* ================== PROFILE SECTION ================== */
 .profile-section {
   position: relative;
@@ -185,10 +184,6 @@ html {
     max-width: 260px;
   }
 }
-
-
-
-
 
 
 
@@ -576,7 +571,6 @@ html {
   object-fit: cover;
   border-radius: 50%;
 }
-
 
 
 /* responive */
@@ -1791,7 +1785,6 @@ align-items: flex-start;
 
 
 
-
 /* ============= contatc ====================== */
 
 .contact-split-section {
@@ -2002,9 +1995,6 @@ align-items: flex-start;
 
 
 
-
-
-
 /* ================= FOOTER ================= */
 
 .footer {
@@ -2035,8 +2025,6 @@ align-items: flex-start;
 
 
 
-
-
 /* clean landscape */
 @media screen and (orientation: landscape) and (max-width: 768px) {
   .profile {
@@ -2058,7 +2046,7 @@ align-items: flex-start;
   .right img {
   width: 260px;
   max-width: none;
-  transform: scale(1.1);
+  
   }
 
 }
@@ -2067,7 +2055,8 @@ align-items: flex-start;
   .right img {
     width: 160px !important;
     height: 160px !important;
-    transform: scale(1.1);
+    transform: translateY(-30px);
+    pointer-events: none; 
   }
 }
 
@@ -2077,17 +2066,18 @@ align-items: flex-start;
   .parallax-bg {
     animation: none !important;
   }
-}
 
-@media screen and (orientation: landscape) and (max-width: 768px) {
   .profile {
     text-align: left;
+    margin-top: 100px;
   }
 
   .cta-buttons {
     justify-content: flex-start;
+    margin-top: 10px; 
   }
 }
+
 
 
 
