--- a/css/styles.css
+++ b/css/styles.css
@@ -1590,9 +1590,6 @@ align-items: flex-start;
 /* fade */
 
 
-
-
-
 /* --- IMAGE --- */
 .project-card img {
   width: 100%;
@@ -1774,11 +1771,10 @@ align-items: flex-start;
 
 @media (max-width: 768px) {
 
-  /* SECTION BUTTON: full width & padding lebih kecil */
   .single-btn-section {
     padding: 20px 5%;
-    margin-top: -20px; /* hilangkan negative margin supaya nggak ke atas */
-    flex-direction: column; /* center stack kalau ada lebih dari 1 button */
+    margin-top: -20px; 
+    flex-direction: column; 
   }
 
   }
@@ -2041,6 +2037,7 @@ align-items: flex-start;
 
   .left h3 {
     font-size: 13px;
+    text-align: center;
   }
 
   .right img {
