--- a/css/styles.css
+++ b/css/styles.css
@@ -1245,6 +1245,112 @@ html {
 }
 
 
+/* ================= GAMING SECTION ================= */
+
+.gaming-section {
+  padding: 100px 8%;
+  /* background: linear-gradient(135deg, #050014, #071b3d); */
+}
+
+.gaming-box {
+  background: #081f4e;
+  max-width: 1100px;
+  margin: auto;
+  padding: 20px 60px; 
+  border-radius: 24px;
+  display: flex;
+  align-items: center;
+  gap: 60px;
+
+  box-shadow: 0 5px 10px rgba(77, 163, 255, 0.6);
+  border: 2px solid rgba(58, 167, 240, 0.8) !important;
+
+  margin-top: -80px;
+  margin-bottom: -80px;
+
+  /* transition: transform 0.4s ease; */
+}
+
+/* .gaming-box:hover {
+  transform: translateY(-6px);
+} */
+
+/* IMAGE */
+.gaming-left img {
+  width: 100%;
+  max-width: 380px;
+  border-radius: 20px;
+  box-shadow: 0 15px 40px rgba(255, 255, 0, 0.25);
+}
+
+/* TEXT */
+.gaming-right h2 {
+  font-size: 34px;
+  color: yellow;
+  margin-bottom: 6px;
+}
+
+.gaming-right h3 {
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
+  opacity: 0.9;
+  margin-bottom: 18px;
+}
+
+.gaming-desc {
+  color: white;
+  font-size: 16px;
+  line-height: 1.7;
+  opacity: 0.85;
+  margin-bottom: 24px;
+}
+
+.gaming-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* kiri | kanan */
+  column-gap: 30px;
+  row-gap: 8px;
+}
+
+
+.gaming-list li {
+  color: white;
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+
+.gaming-list span {
+  color: yellow;
+  font-weight: 600;
+}
+
+/* RESPONSIVE */
+@media (max-width: 900px) {
+  .gaming-box {
+    flex-direction: column;
+    padding: 40px 28px;
+    text-align: center;
+  }
+
+  .gaming-left img {
+    max-width: 300px;
+  }
+}
+
+@media (max-width: 600px) {
+  .gaming-list {
+    grid-template-columns: 1fr;
+  }
+}
+
+
+
+
 
 
 /* ================= EDUCATION ================= */
